@@ -1,23 +1,24 @@
 package com.github.kojotak;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 import static com.github.kojotak.Util.*;
-import static java.util.stream.Collectors.toList;
 
 public record Set(List<Card> cards) implements Meld {
 
-    public Set(Rank rank, List<Suit> suits) {
-        this(suits.stream().map(suit -> new Card(rank, suit)).toList());
+    public Set(Card ... cards){
+        this(List.of(cards));
     }
 
     public Set {
         uniqueOrFail(cards, Card::rank);
-        var suits = uniqueSetOrFail(cards.stream().map(Card::suit).collect(toList()));
-        if (suits.size() < MINIMUM_LENGTH) {
+        uniqueSetOrFail(cards.stream().map(Card::suit).filter(Objects::nonNull).toList());
+        if (cards.size() < MINIMUM_LENGTH) {
             throw new IllegalStateException("Illegal set - minimum length violated");
         }
+        cards = cards.stream().sorted().toList();
     }
 
     public List<Card> getCards() {
@@ -37,7 +38,7 @@ public record Set(List<Card> cards) implements Meld {
     public String toString() {
         return rank() + "[" + cards.stream()
                 .map(Card::suit)
-                .map(suit -> suit != null ? suit.toString() : "*")
+                .map(suit -> Objects.toString(suit, "*"))
                 .collect(Collectors.joining(",")) + "]";
     }
 }
